--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
 
-  name: FORREPLACE1235-configmap
-  namespace: FORREPLACE1235
+  name: as1235556-configmap
+  namespace: as1235556
 data:
    sql_mode.cnf: |
       [mysqld]
